[tool.poetry]
name = "screenpy"
version = "0.1.0"
description = "Parse and annotate screenplays with markup language."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sense2vec = "^2.0.0"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
nltk = "^3.7"
numpy = "^1.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
